Way of getting Results from XMLParser

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="title_activity_display_homepage">DisplayHomepage</string>
     <string name="hello_world">Hello world!</string>
     <string name="hide">Hide</string>
+    <string name="gps_location">GPS LOCATION</string>
 
 </resources>
